--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=LaravelAdminStarter
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YzgU6k1sHfMSt2v7ra28ciWLOz7tjJKUBqfhgGUWJWg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=manajemen_kos
+DB_DATABASE=laravel-admin-starter
 DB_USERNAME=root
 DB_PASSWORD=
 
